# polycity-stay

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
data/: seed_hotels.json
polycity_stay/: __init__.py  agents.py  config.py  json_utils.py  language.py  memory.py  ollama_setup.py  pipeline.py  report_render.py  tools.py
